zero-cost-templating/tests/ui/compile_fail/initial_unexpected_parameter.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> tests/ui/compile_fail/initial_macro_unexpected_parameter.rs:11:20
   |
11 |     let template = test_initial0("unexpected");
   |                    ^^^^^^^^^^^^^ ------------
   |                                  |
   |                                  unexpected argument of type `&'static str`
   |                                  help: remove the extra argument
   |
note: function defined here
  --> tests/ui/compile_fail/initial_macro_unexpected_parameter.rs:9:1
   |
9  | #[template_stream("test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
